--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -86,38 +86,32 @@ jobs:
         echo "准备构建环境..."
         
         if [ -d "PersonalCard" ]; then
-          echo "检查 PersonalCard 目录..."
+          echo "修复 build.gradle 文件..."
           
-          # 如果已经有了 build.gradle，删除并重新创建
-          if [ -f "PersonalCard/build.gradle" ]; then
-            echo "备份并重新创建 build.gradle..."
-            mv PersonalCard/build.gradle PersonalCard/build.gradle.backup
-          fi
-          
-          # 创建更简单的 build.gradle
-          echo "创建简单的 build.gradle..."
+          # 创建正确的 build.gradle
+          echo "创建正确的 build.gradle..."
           echo '// Top-level build file' > PersonalCard/build.gradle
           echo 'buildscript {' >> PersonalCard/build.gradle
+          echo '    repositories {' >> PersonalCard/build.gradle
+          echo '        google()' >> PersonalCard/build.gradle
+          echo '        mavenCentral()' >> PersonalCard/build.gradle
+          echo '    }' >> PersonalCard/build.gradle
           echo '    dependencies {' >> PersonalCard/build.gradle
           echo '        classpath "com.android.tools.build:gradle:8.1.0"' >> PersonalCard/build.gradle
           echo '    }' >> PersonalCard/build.gradle
           echo '}' >> PersonalCard/build.gradle
           
-          # 检查是否需要创建 settings.gradle
-          if [ ! -f "PersonalCard/settings.gradle" ]; then
-            echo "创建 settings.gradle..."
-            echo "include ':app'" > PersonalCard/settings.gradle
-            echo "rootProject.name = 'PersonalCard'" >> PersonalCard/settings.gradle
-            echo "dependencyResolutionManagement {" >> PersonalCard/settings.gradle
-            echo "    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)" >> PersonalCard/settings.gradle
-            echo "    repositories {" >> PersonalCard/settings.gradle
-            echo "        google()" >> PersonalCard/settings.gradle
-            echo "        mavenCentral()" >> PersonalCard/settings.gradle
-            echo "    }" >> PersonalCard/settings.gradle
-            echo "}" >> PersonalCard/settings.gradle
-          fi
+          # 添加 allprojects 配置
+          echo '' >> PersonalCard/build.gradle
+          echo 'allprojects {' >> PersonalCard/build.gradle
+          echo '    repositories {' >> PersonalCard/build.gradle
+          echo '        google()' >> PersonalCard/build.gradle
+          echo '        mavenCentral()' >> PersonalCard/build.gradle
+          echo '    }' >> PersonalCard/build.gradle
+          echo '}' >> PersonalCard/build.gradle
+          
+          echo "build.gradle 修复完成"
         fi
-
     # ==== 6. 构建 PersonalCard 项目 ====
     - name: Build PersonalCard project
       run: |
