--- a/PersonalCard/settings.gradle
+++ b/PersonalCard/settings.gradle
@@ -9,8 +9,10 @@ dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
-        mavenCentral()
         maven { url 'https://jitpack.io' }  // 用于 UCrop
+        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public' }  // 阿里云镜像作为备选
+        maven { url 'https://maven.aliyun.com/repository/google' }
     }
 }
 rootProject.name = "PersonalCard"
