--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,14 +1,13 @@
+name: Android Build - PersonalCard
 
-  name: Android Build - PersonalCard
-
-  on:
+on:
     push:
       branches: [ "main" ]
     pull_request:
       branches: [ "main" ]
     workflow_dispatch:
 
-  jobs:
+jobs:
     build:
       runs-on: ubuntu-latest
 
@@ -56,15 +55,44 @@
                 https://raw.githubusercontent.com/gradle/gradle/v8.2.1/gradle/wrapper/gradle-wrapper.jar
             fi
 
+        - name: Create gradle.properties
+          run: |
+            mkdir -p ~/.gradle
+            cat > ~/.gradle/gradle.properties <<EOF
+            org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+            org.gradle.parallel=true
+            org.gradle.caching=true
+            org.gradle.daemon=false
+            systemProp.http.agent=Gradle/8.2
+            EOF
+            echo "✓ gradle.properties 已创建"
+
         - name: Setup Gradle
           uses: gradle/actions/setup-gradle@v3
           with:
             build-root-directory: PersonalCard
 
+        - name: Clean Gradle cache
+          run: |
+            cd PersonalCard
+            ./gradlew clean --no-daemon
+
         - name: Build with Gradle
           run: |
             cd PersonalCard
-            ./gradlew assembleDebug --stacktrace
+            # 重试最多 3 次
+            for i in 1 2 3; do
+              echo "=== Build attempt $i ==="
+              ./gradlew assembleDebug --stacktrace --no-daemon && break || {
+                if [ $i -lt 3 ]; then
+                  echo "Build attempt $i failed. Retrying in 10 seconds..."
+                  sleep 10
+                else
+                  echo "All build attempts failed."
+                  exit 1
+                fi
+              }
+            done
 
         - name: List build outputs
           if: always()
